<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_statistiken"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu">

    <TextView
        android:id="@+id/statistiken_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/statistiken_title_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        style="@style/luxurious"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"  />

    <Button
        android:id="@+id/statistiken_hilfe"
        android:onClick="onClickHilfeDisplayHilfe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_with_black_borders"

        android:text="@string/button_hilfe_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="@style/luxurious"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"  />

    <Button
        android:id="@+id/statistiken_hilfeSchliessen"
        android:onClick="onClickHilfeSchliessenCloseHilfe"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_hilfe_background_with_grey_borders"

        android:enabled="false"
        android:visibility="invisible"

        android:text="@string/button_hilfeSchliessen_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="@style/luxurious"
        android:padding="5dp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/statistiken_zurueck"
        android:onClick="onClickZurueckSwitchToExtras"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_with_black_borders"

        android:text="@string/button_zurueck_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="@style/luxurious"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp" />

    <ScrollView
        android:id="@+id/statistiken_allStatistics"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@drawable/white_background_black_borders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistiken_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statistiken_totalGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistiken_totalGames_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                style="@style/luxurious"/>

            <TextView
                android:id="@+id/statistiken_wavesCleared"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistiken_wavesCleared_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                style="@style/luxurious"/>

            <TextView
                android:id="@+id/statistiken_enemiesDefeated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistiken_enemiesDefeated_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                style="@style/luxurious"
                />

            <TextView
                android:id="@+id/statistiken_goldEarned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistiken_goldEarned_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                style="@style/luxurious"/>

            <TextView
                android:id="@+id/statistiken_goldSpend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistiken_goldSpend_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                style="@style/luxurious"/>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/statistiken_informationStatisticsButton"
        android:onClick="onClickInformationButton"
        android:tag="0"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/button_hilfe_background_with_grey_borders"
        android:scaleType="fitCenter"
        android:src="@drawable/information"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="@+id/statistiken_allStatistics"
        app:layout_constraintEnd_toStartOf="@+id/statistiken_allStatistics"
        app:layout_constraintTop_toTopOf="@+id/statistiken_allStatistics"
        android:layout_marginEnd="5dp" />

    <LinearLayout
        android:id="@+id/statistiken_informationLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/white_background_black_borders"
        android:elevation="100dp"
        android:orientation="vertical"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="@id/statistiken_allStatistics"
        app:layout_constraintEnd_toEndOf="@+id/statistiken_allStatistics"
        app:layout_constraintStart_toStartOf="@+id/statistiken_allStatistics"
        app:layout_constraintTop_toTopOf="@id/statistiken_allStatistics">

        <ImageButton
            android:id="@+id/statistiken_closeInformationBtn"
            android:onClick="onClickInformationSchliessen"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:background="@color/red_holo"
            android:src="@drawable/close"

            android:scaleType="fitXY"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_background_black_borders">

            <LinearLayout
                android:id="@+id/statistiken_informationScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/statistiken_informationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    style="@style/luxurious"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>