<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_levelauswahl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu">


    <TextView
        android:id="@+id/levelauswahl_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/levelauswahl_title_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        style="@style/luxurious"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"  />

    <Button
        android:id="@+id/levelauswahl_hilfe"
        android:onClick="onClickHilfeDisplayHilfe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_with_black_borders"

        android:text="@string/button_hilfe_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="@style/luxurious"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"  />

    <Button
        android:id="@+id/levelauswahl_hilfeSchliessen"
        android:onClick="onClickHilfeSchliessenCloseHilfe"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_hilfe_background_with_grey_borders"

        android:enabled="false"
        android:visibility="invisible"

        android:text="@string/button_hilfeSchliessen_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="@style/luxurious"
        android:padding="5dp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/levelauswahl_zurueck"
        android:onClick="onClickZurueckSwitchToMenu"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_with_black_borders"
        android:text="@string/button_zurueck_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="@style/luxurious"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/levelauswahl_button_level_1"
        android:onClick="onClickSelectLevel"
        android:tag="0"

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/button_background_with_black_borders"

        android:text="@string/levelauswahl_button_level_1_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="@style/luxurious"

        app:layout_constraintBottom_toBottomOf="@+id/levelauswahl_button_level_2"
        app:layout_constraintEnd_toStartOf="@+id/levelauswahl_button_level_2"
        app:layout_constraintTop_toTopOf="@+id/levelauswahl_button_level_2"

        android:layout_marginEnd="16dp"
        />

    <Button
        android:id="@+id/levelauswahl_button_level_2"
        android:onClick="onClickSelectLevel"
        android:tag="1"

        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:background="@drawable/button_background_with_black_borders"

        android:text="@string/levelauswahl_button_level_2_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="@style/luxurious"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelauswahl_title"
        app:layout_constraintBottom_toTopOf="@id/levelauswahl_button_spielStarten"

        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/levelauswahl_button_level_3"
        android:onClick="onClickSelectLevel"
        android:tag="2"

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background_with_black_borders"

        android:text="@string/levelauswahl_button_level_3_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="@style/luxurious"

        app:layout_constraintBottom_toBottomOf="@+id/levelauswahl_button_level_2"
        app:layout_constraintStart_toEndOf="@+id/levelauswahl_button_level_2"
        app:layout_constraintTop_toTopOf="@+id/levelauswahl_button_level_2"
        />

    <Button
        android:id="@+id/levelauswahl_button_spielStarten"
        android:onClick="onClickSpielStartenStartGame"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_transparent_background_with_black_borders"

        android:enabled="false"

        android:text="@string/levelauswahl_button_spielStarten_text"
        android:textSize="15sp"
        style="@style/luxurious"
        android:textColor="@color/dark_grey"

        app:layout_constraintEnd_toEndOf="@id/levelauswahl_button_level_3"
        app:layout_constraintStart_toStartOf="@id/levelauswahl_button_level_1"
        app:layout_constraintTop_toBottomOf="@+id/levelauswahl_button_level_2"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        />

    <ImageButton
        android:id="@+id/levelauswahl_informationLevelsButton"
        android:onClick="onClickInformationButton"
        android:tag="0"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/button_hilfe_background_with_grey_borders"
        android:scaleType="fitCenter"
        android:src="@drawable/information"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="@+id/levelauswahl_button_level_1"
        app:layout_constraintEnd_toStartOf="@+id/levelauswahl_button_level_1"
        app:layout_constraintTop_toTopOf="@+id/levelauswahl_button_level_1"
        android:layout_marginEnd="5dp"
        />

    <ImageButton
        android:id="@+id/levelauswahl_informationStartGameButton"
        android:onClick="onClickInformationButton"
        android:tag="1"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/button_hilfe_background_with_grey_borders"
        android:scaleType="fitCenter"
        android:src="@drawable/information"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="@+id/levelauswahl_button_spielStarten"
        app:layout_constraintEnd_toStartOf="@+id/levelauswahl_button_spielStarten"
        app:layout_constraintTop_toTopOf="@+id/levelauswahl_button_spielStarten"

        android:layout_marginEnd="5dp"
        />

    <LinearLayout
        android:id="@+id/levelauswahl_informationLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/white_background_black_borders"
        android:elevation="100dp"
        android:orientation="vertical"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="@+id/levelauswahl_button_spielStarten"
        app:layout_constraintEnd_toEndOf="@+id/levelauswahl_button_level_3"
        app:layout_constraintStart_toStartOf="@+id/levelauswahl_button_level_1"
        app:layout_constraintTop_toTopOf="@+id/levelauswahl_button_level_2">

        <ImageButton
            android:id="@+id/levelauswahl_closeInformationBtn"
            android:onClick="onClickInformationSchliessen"

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:background="@color/red_holo"
            android:src="@drawable/close"


            android:scaleType="fitXY"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"  />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_background_black_borders">

            <LinearLayout
                android:id="@+id/levelauswahl_informationScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/levelauswahl_informationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    style="@style/luxurious" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>